[gd_scene load_steps=8 format=3 uid="uid://cy67vso5ivxn4"]

[ext_resource type="Script" uid="uid://c2wo4wwwshjne" path="res://entities/weapons/ranged/ranged_weapon.gd" id="1_mypxy"]
[ext_resource type="Script" uid="uid://d2odt5s6rdu5a" path="res://components/projectile_spawner.gd" id="2_jkhik"]
[ext_resource type="Texture2D" uid="uid://ona7fs5aqntt" path="res://icon.svg" id="2_mkd1b"]
[ext_resource type="PackedScene" uid="uid://bwdgm3g1m85m7" path="res://entities/projectiles/basic_projectile.tscn" id="3_jkhik"]
[ext_resource type="Script" uid="uid://bh6cqtnko4j6x" path="res://components/attack_component.gd" id="5_hgr2d"]
[ext_resource type="Script" uid="uid://d04s5a06kemh" path="res://components/resources/damage.gd" id="6_8oynv"]

[sub_resource type="Resource" id="Resource_2baca"]
script = ExtResource("6_8oynv")
value = 1
source = 2
metadata/_custom_type_script = "uid://d04s5a06kemh"

[node name="RangedWeapon" type="Node2D"]
script = ExtResource("1_mypxy")
projectile_velocity = 150.0
metadata/_custom_type_script = "uid://c2wo4wwwshjne"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(11, 0)
scale = Vector2(0.25, 0.063)
texture = ExtResource("2_mkd1b")

[node name="ProjectileSpawner" type="Marker2D" parent="."]
position = Vector2(23, 0)
script = ExtResource("2_jkhik")
projectile_scene = ExtResource("3_jkhik")
metadata/_custom_type_script = "uid://d2odt5s6rdu5a"

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("5_hgr2d")
DamageComp = SubResource("Resource_2baca")
metadata/_custom_type_script = "uid://bh6cqtnko4j6x"
